feat(server): Introduce HttpVerb enum for type-safe method specification.
Add HttpVerb enum (GET, HEAD, POST, PUT, DELETE, OPTIONS, PATCH, TRACE, CONNECT)
and migrate CorsConfigurationBuilder.allowedMethods and HttpErrors.methodNotAllowed
from String/Collection<String> to HttpVerb varargs.  Duplicate verbs are silently
deduplicated via LinkedHashSet in both sites.  Also adds null-message coverage test
for ServerRequestEventListener.appendExceptionSection.